cluster/galaxy-site/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: galaxy-site
  labels:
    pod-security.kubernetes.io/enforce: restricted
